--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -34,6 +35,8 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-
 # pycharm
 .idea
+
+# lock files
+pnpm-lock.yaml
